# example/openapi.yaml
@@ -369,29 +369,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-        post:
-            tags:
-                - GroupService
-            operationId: GroupService_Create
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/CreateGroupRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/CreateGroupResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
     /v1/group/{id}:
         get:
             tags:
@@ -410,426 +387,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/GetGroupResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-        put:
-            tags:
-                - GroupService
-            operationId: GroupService_Update
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/UpdateGroupRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/UpdateGroupResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-        delete:
-            tags:
-                - GroupService
-            operationId: GroupService_Delete
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/DeleteGroupResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /v1/group/{id}/groupusers:
-        get:
-            tags:
-                - GroupService
-            operationId: GroupService_ListGroupUsers
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-                - name: options.id.eq
-                  in: query
-                  schema:
-                    type: string
-                - name: options.id.ne
-                  in: query
-                  schema:
-                    type: string
-                - name: options.id.gt
-                  in: query
-                  schema:
-                    type: string
-                - name: options.id.gte
-                  in: query
-                  schema:
-                    type: string
-                - name: options.id.lt
-                  in: query
-                  schema:
-                    type: string
-                - name: options.id.lte
-                  in: query
-                  schema:
-                    type: string
-                - name: options.id.between.list
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: string
-                - name: options.id.in.list
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: string
-                - name: options.name.eq
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.ne
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.gt
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.gte
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.lt
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.lte
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.between.list
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: string
-                - name: options.name.in.list
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: string
-                - name: options.name.eqFold
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.contains
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.hasPrefix
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.hasSuffix
-                  in: query
-                  schema:
-                    type: string
-                - name: options.name.like
-                  in: query
-                  schema:
-                    type: string
-                - name: options.createdAt.eq
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.createdAt.ne
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.createdAt.gt
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.createdAt.gte
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.createdAt.lt
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.createdAt.lte
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.createdAt.between.list
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.updatedAt.eq
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.updatedAt.ne
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.updatedAt.gt
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.updatedAt.gte
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.updatedAt.lt
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.updatedAt.lte
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.updatedAt.between.list
-                  in: query
-                  schema:
-                    type: string
-                    format: date-time
-                - name: options.groupId.eq
-                  in: query
-                  schema:
-                    type: string
-                - name: options.groupId.ne
-                  in: query
-                  schema:
-                    type: string
-                - name: options.groupId.gt
-                  in: query
-                  schema:
-                    type: string
-                - name: options.groupId.gte
-                  in: query
-                  schema:
-                    type: string
-                - name: options.groupId.lt
-                  in: query
-                  schema:
-                    type: string
-                - name: options.groupId.lte
-                  in: query
-                  schema:
-                    type: string
-                - name: options.status.eq
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.status.ne
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.status.gt
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.status.gte
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.status.lt
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.status.lte
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.status.between.list
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: integer
-                        format: int32
-                - name: options.status.in.list
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: integer
-                        format: int32
-                - name: options.userGroups.name.eq
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.ne
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.gt
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.gte
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.lt
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.lte
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.eqFold
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.contains
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.hasPrefix
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.hasSuffix
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.name.like
-                  in: query
-                  schema:
-                    type: string
-                - name: options.userGroups.groupUsers.status.eq
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.userGroups.groupUsers.status.ne
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.userGroups.groupUsers.status.gt
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.userGroups.groupUsers.status.gte
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.userGroups.groupUsers.status.lt
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: options.userGroups.groupUsers.status.lte
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: paginator.classical.page
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: paginator.classical.limit
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: paginator.classical.total
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: paginator.classical.next
-                  in: query
-                  schema:
-                    type: boolean
-                - name: paginator.classical.order.by
-                  in: query
-                  schema:
-                    type: string
-                - name: paginator.classical.order.desc
-                  in: query
-                  schema:
-                    type: boolean
-                - name: paginator.infinite.sequence
-                  in: query
-                  schema:
-                    type: string
-                - name: paginator.infinite.limit
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: paginator.infinite.next
-                  in: query
-                  schema:
-                    type: boolean
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/ListUserResponse'
                 default:
                     description: Default error response
                     content:
@@ -1728,28 +1285,6 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        CreateGroupRequest:
-            type: object
-            properties:
-                id:
-                    type: string
-                name:
-                    type: string
-                createdAt:
-                    type: string
-                    format: date-time
-                updatedAt:
-                    type: string
-                    format: date-time
-                groupUsers:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/User'
-        CreateGroupResponse:
-            type: object
-            properties:
-                id:
-                    type: string
         CreateUserRequest:
             type: object
             properties:
@@ -1780,9 +1315,6 @@ components:
             properties:
                 id:
                     type: string
-        DeleteGroupResponse:
-            type: object
-            properties: {}
         DeleteUserResponse:
             type: object
             properties: {}
@@ -2034,16 +1566,6 @@ components:
                     items:
                         type: string
                         format: date-time
-        UpdateGroupRequest:
-            type: object
-            properties:
-                id:
-                    type: string
-                update:
-                    $ref: '#/components/schemas/GroupUpdate'
-        UpdateGroupResponse:
-            type: object
-            properties: {}
         UpdateUserRequest:
             type: object
             properties:
